cluster/components/kuberay/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: raycluster-ingress
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: "k8s.local"
    http:
      paths:
      - path: /raycluster
        pathType: ImplementationSpecific
        backend:
          service:
            name: rayservice-sample-head-svc
            port:
              number: 8265
